--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,13 +16,15 @@
             android:layout_marginStart="16dp"
             android:textSize="18sp" android:layout_marginTop="16dp" android:id="@+id/textView"/>
 
-    <androidx.recyclerview.widget.RecyclerView
+    <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
             android:layout_height="0dp" android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:id="@+id/categoryListView"
-            android:divider="@null"/>
+            android:divider="@null"
+            tools:listitem="@layout/category_list_item"
+    />
 
 </android.support.constraint.ConstraintLayout>
