--- a/app/src/main/res/layout/product_list_item.xml
+++ b/app/src/main/res/layout/product_list_item.xml
@@ -9,7 +9,7 @@
     <ImageView
             android:layout_width="0dp"
             android:layout_height="0dp" app:srcCompat="@drawable/hat1"
-            android:id="@+id/productImage"
+            android:id="@+id/productDetailImage"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintDimensionRatio="w,1:1"
@@ -17,15 +17,15 @@
     <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/productName" tools:text="Beanie" app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/productDetailTitle" tools:text="Beanie" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/productImage"
+            app:layout_constraintTop_toBottomOf="@+id/productDetailImage"
             android:textAlignment="center" app:layout_constraintHorizontal_bias="0.0"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/productPrice" tools:text="$18"
-            app:layout_constraintTop_toBottomOf="@+id/productName"
+            app:layout_constraintTop_toBottomOf="@+id/productDetailTitle"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" android:textAlignment="center"/>
